log
Wed 20 Mar 2024 12:23:57 AM UTC: 
 tests:  0|5
total_score: 0/70
937f263
Wed 20 Mar 2024 12:31:01 AM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:14: error: invalid use of undefined type ‘struct List’
   60 |     suma += L[i];
      |              ^
exercises.c:60:13: error: invalid use of incomplete typedef ‘List’
   60 |     suma += L[i];
      |             ^
Compilation failed
15d82d7
Wed 20 Mar 2024 01:07:35 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:71:3: error: expected expression before ‘return’
   71 |   return suma;
      |   ^~~~~~
exercises.c:65:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   65 |   int suma = 0;
      |       ^~~~
exercises.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
43ff625
Wed 20 Mar 2024 01:07:45 AM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
e4769d0
Wed 20 Mar 2024 01:15:15 AM UTC: 
 exercises.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
2b48f91
Wed 20 Mar 2024 01:47:13 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
6602435
Wed 20 Mar 2024 02:42:18 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:94:18: error: expected expression before ‘List’
   94 |       popCurrent(List *L)
      |                  ^~~~
exercises.c:94:26: error: expected ‘;’ before ‘}’ token
   94 |       popCurrent(List *L)
      |                          ^
      |                          ;
   95 |   }
      |   ~                       
Compilation failed
958b304
Wed 20 Mar 2024 02:52:29 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:95:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   95 |     int *dato = (int *)next(L);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
dd983b4
Wed 20 Mar 2024 02:55:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:95:16: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   95 |     int dato = (int *)next(L);
      |                ^
exercises.c:95:9: error: unused variable ‘dato’ [-Werror=unused-variable]
   95 |     int dato = (int *)next(L);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d56c124
Wed 20 Mar 2024 02:56:05 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
9ea5da1
Wed 20 Mar 2024 03:13:41 AM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:117:3: error: dereferencing ‘void *’ pointer [-Werror]
  117 |   *dato = pop(P3)
      |   ^~~~~
exercises.c:117:9: error: invalid use of void expression
  117 |   *dato = pop(P3)
      |         ^
exercises.c:117:18: error: expected ‘;’ before ‘while’
  117 |   *dato = pop(P3)
      |                  ^
      |                  ;
  118 |   while (dato != NULL)
      |   ~~~~~           
cc1: all warnings being treated as errors
Compilation failed
76cdf3a
Wed 20 Mar 2024 03:13:49 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:117:3: error: dereferencing ‘void *’ pointer [-Werror]
  117 |   *dato = pop(P3);
      |   ^~~~~
exercises.c:117:9: error: invalid use of void expression
  117 |   *dato = pop(P3);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
892a278
Wed 20 Mar 2024 03:15:29 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
e19ddbb
Wed 20 Mar 2024 03:20:01 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
accf87d
Wed 20 Mar 2024 11:20:44 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
2dfebfb
